# MetagenomeScope

./: .coveragerc  .gitattributes  .gitignore  .jshintrc  .travis.yml  20170613_log  20170814_log_with_optimizations  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_LICENSES.txt  FEATURES_TODO.md  GENERAL_TODO.md  INSTALLING.txt  MANIFEST.in  Makefile  README.md  STAMPS_tutorial.md  commit.fish  commit.sh  environment.yml  minify_files.fish  minify_files.sh  pyproject.toml  setup.py  update_dbs.fish  update_dbs.sh  video_tutorial_script.txt
.github/old-workflows/: js.yml
.github/workflows/: main.yml  python.yml
Demo/: .htaccess  .htpasswd  xdot2cy.js
demo/: NOTE  index.html
dependency_licenses/: MetaCarvel.license
docs/: 404.html  DEPENDENCY_LICENSES.txt  README.md  addshadows.sh  extra_functionality.js  index.html  mgsc_docs_style.css
docs/css/: mgsc_docs_style.css  vaguely_adequate.css
docs/js/: autocollapse_nav.js  extra_functionality.js  open_screenshot.js
electron/: README.md  index.html  index.min.html  main.js  package-lock.json  package.json
graph_collator/: _assembly_graph.py  _assembly_graph_parser.py  alph_ids_to_num_ids.py  collate.py  collate_clusters.py  collate_pgv.py  config.py  graph_config.py  graph_objects.py  node_objectsc.py  node_objectsc_modrope.py  pgv_test.py  rand_generate.py  scaling_test.py  spqr  spqr.cpp  spqr_asmviz  spqr_asmviz.cpp  spqr_modified
graph_collator/ecolix/: ecolix_1.xdot  ecolix_2.xdot  ecolix_5.xdot
graph_collator/no_spqr/: collate.py  config.py  graph_objects.py
graph_collator/sample2x/: sample2x.db
graph_collator/single_graph_test/: collate.py  config.py  graph_objects.py
graph_collator/tests/: README.md  test_assembly_graph_parser.py  test_patterns.py  test_spqr.py  utils.py
metagenomescope/: CONTRIBUTING.md  __init__.py  _cli.py  _param_descriptions.py  agp_utils.py  alph_ids_to_num_ids.py  arg_utils.py  assembly_graph_parser.py  chart_utils.py  collate.py  color_utils.py  config.py  css_config.py  cy_config.py  cy_utils.py  defaults.py  descs.py  errors.py  file_utils.py  gap.py  gfa_utils.py  graph_objects.py  input_node_utils.py  layout_config.py  layout_utils.py  log_utils.py  macos_high_sierra_spqr  main.py  misc_utils.py  msg_utils.py  name_utils.py  parsers.py  path_utils.py  rand_generate.py  seq_utils.py  spqr  spqr.cpp  ui_config.py  ui_utils.py
metagenomescope/assets/: cscallbacks.js  dashAgGridFunctions.js  dbc.css  viewer.css
metagenomescope/graph/: README.md  __init__.py  assembly_graph.py  component.py  draw_results.py  edge.py  graph_utils.py  node.py  node_layout.py  pattern.py  pattern_stats.py  subgraph.py  validators.py
metagenomescope/graph_objects/: README.md  __init__.py  assembly_graph.py  assemblygraph.py  basic_objects.py  component.py  pattern.py  patterns.py  spqr_mode_objects.py
metagenomescope/layout/: __init__.py  layout.py  layout_config.py  layout_utils.py
metagenomescope/static/: main.js  viewer.css
metagenomescope/support_files/: index.html  main.js
metagenomescope/templates/: index.html
metagenomescope/tests/: README.md  test_arg_utils.py  test_assembly_graph_parser.py  test_chart_utils.py  test_collate_functions.py  test_color_utils.py  test_edge_corner_cases.py  test_file_utils.py  test_gap.py  test_gfa_utils.py  test_input_node_utils.py  test_install.py  test_layout_utils.py  test_log_utils.py  test_misc_utils.py  test_msg_utils.py  test_name_utils.py  test_path_utils.py  test_patterns.py  test_seq_utils.py  test_spqr.py  test_ui_utils.py  test_validate_lastgraph.py  utils.py
metagenomescope/viewer/: index.html
mgsc/: __init__.py
mgsc/static/: main.js
mgsc/templates/: index.html
notes/: layout_summary.txt
old_scripts/: rand_generate.py
testgraphs/: 4cycle_test_LastGraph  RF_ct.gml  RF_newct.gml  RF_oriented.gml  RF_small.gml  bezierOverlapTest_LastGraph  chainTest_LastGraph  cycletest2_LastGraph  cycletest3_LastGraph  cycletestPlain_LastGraph  cycletest_LastGraph  longtest_LastGraph  rt_LastGraph  sample2_LastGraph
testgraphs/small_ecoli/: bundled_graph.gml  bundled_graph_gml.xdot  oriented.gml  oriented_gml.xdot
tests/: README.md  test_collate_functions.py  test_edge_corner_cases.py  test_patterns.py  test_spqr.py  utils.py
tests/graph_collator/: test_collate_functions.py  utils.py
tests/input/: bubble_test.gml  cycletest_LastGraph  longtest_LastGraph
tests/output/: cycletest_LastGraph.db
tests/viewer/: index.html
testxdots/: chain_test_LG.xdot  chain_test_LG2.xdot  cycletest.xdot  ecoli_ws.xdot  layout.xdot  rf_ct_fixed.xdot  rf_newct_fixed.xdot  rf_oriented.gv  rf_oriented_fixed_20284.gv  rf_oriented_withcycles.gv  rf_small.gv  rf_small.xdot  rf_small_cycles.xdot  rf_small_fixed.xdot  sample1.xdot  sample1_clusters.gv  sample2.xdot  sample2_clusters.gv  sample2_clusters_widthscaled.gv  sample2_widthscaled.xdot  sample2_ws.xdot
testxdots/RF_oriented/: RF_oriented_1.gv  RF_oriented_10.gv  RF_oriented_10.xdot  RF_oriented_100.gv  RF_oriented_100.xdot  RF_oriented_101.gv  RF_oriented_102.gv  RF_oriented_102.xdot  RF_oriented_103.gv  RF_oriented_104.gv  RF_oriented_105.gv  RF_oriented_106.gv  RF_oriented_106.xdot  RF_oriented_109.gv  RF_oriented_109.xdot  RF_oriented_11.gv  RF_oriented_11.xdot  RF_oriented_110.gv  RF_oriented_110.xdot  RF_oriented_111.gv  RF_oriented_111.xdot  RF_oriented_112.xdot  RF_oriented_113.gv  RF_oriented_113.xdot  RF_oriented_115.gv  RF_oriented_116.gv  RF_oriented_117.gv  RF_oriented_117.xdot  RF_oriented_118.gv  RF_oriented_12.gv  RF_oriented_120.gv  RF_oriented_121.gv  RF_oriented_122.gv  (+485 more)
tool_design/: tool.aux  tool.dvi  tool.out  tool.tex
viewer/: 404.html  asmviz_viewer.html  headless_tests_index.html  headless_tests_index.min.html  index.html  index.min.html  populate_demo.py  read_file_linebyline.js  sample_demo_db_list.tsv  sample_demo_db_list_no_cts.tsv  template.html  viewer.html  viewer_style.css  webstrates_index.html  xdot2cy.js
xdot_parser/: cytoscape2.7.6.js  parser_interface.html  point_str_converter.py  xdot2cy.js
xdot_viewer/: asmviz_viewer.html  cytoscape.js  xdot2cy.js
(+516 files in other folders)
