[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# stop setuptools from exploding when it sees other folders in the same
# directory as "metagenomescope"
# https://stackoverflow.com/questions/72294299#comment136920309_72547402
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
[tool.setuptools]
packages = ["metagenomescope"]

# Get the version from the metagenomescope/__init__.py file in order to
# avoid duplicating it. See
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
# and https://packaging.python.org/en/latest/discussions/single-source-version/
# (and https://github.com/django-crispy-forms/django-crispy-forms/blob/main/pyproject.toml
# for a real example)
[tool.setuptools.dynamic]
version = {attr = "metagenomescope.__version__"}

[project]
name = "metagenomescope"
dynamic = ["version"]
license = {file = "COPYING.txt"}
description = "Visualization tool for (meta)genome assembly graphs"
readme = "README.md"
authors = [
    {name = "MetagenomeScope Development Team", email = "mfedarko@umd.edu"},
]
maintainers = [
    {name = "Marcus Fedarko", email = "mfedarko@umd.edu"},
]
keywords = ["bioinformatics", "metagenome", "assembly", "graph", "bubble"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]
# NOTE: Previously, I had numpy and pygraphviz listed as "setup_requires"
# dependencies (in the old setup.py version of this file). As of December 2025
# it seems like both of these packages can be installed as ordinary
# dependencies here without problems, so now I am just including them here.
# However, we can move these to build-system.requires if needed to match the
# old behavior.
dependencies = [
    "click",
    "numpy",
    "networkx",
    "pygraphviz",
    "gfapy",
    "pyfastg",
    "dash-cytoscape",
]
# Based on dash-cytoscape's min python version.
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black >= 22.1.0",
    "pandas",
]

[project.scripts]
mgsc = "metagenomescope._cli:run_script"

[project.urls]
homepage = "https://marbl.github.io/MetagenomeScope/"
source = "https://github.com/marbl/MetagenomeScope"
