[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# it is apparently convention to include tests along with the sdist, so sure.
# this should also include files in tests/input, which is nice
[tool.hatch.build.targets.sdist]
include = [
    "metagenomescope/*",
    "COPYING.txt",
    "README.md"
]
exclude = [
    "docs"
]

# wheels shouldn't have tests
# https://packaging.python.org/en/latest/discussions/package-formats/
[tool.hatch.build.targets.wheel]
include = [
    "metagenomescope/*",
    "COPYING.txt",
    "README.md"
]
exclude = [
    "metagenomescope/tests/*",
    "docs"
]

# hatch will extract the version for us - https://hatch.pypa.io/latest/version/
[tool.hatch.version]
path = "metagenomescope/__init__.py"

[project]
name = "metagenomescope"
dynamic = ["version"]
license = "GPL-3.0-only"
license-files = {paths = ["COPYING.txt"]}
description = "Visualization tool for (meta)genome assembly graphs"
readme = "README.md"
authors = [
    {name = "MetagenomeScope Development Team", email = "mfedarko@umd.edu"},
]
maintainers = [
    {name = "Marcus Fedarko", email = "mfedarko@umd.edu"},
]
keywords = ["bioinformatics", "metagenome", "assembly", "graph", "bubble"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]
# NOTE: Previously, I had numpy and pygraphviz listed as "setup_requires"
# dependencies (in the old setup.py version of this file). As of December 2025
# it seems like both of these packages can be installed as ordinary
# dependencies here without problems, so now I am just including them here.
# However, we can move these to build-system.requires if needed to match the
# old behavior.
# NOTE 2: numpy is not currently required, but eventually we will probs add it
# back in order to do node/edge scaling.
dependencies = [
    "click",
    "networkx",
    "pygraphviz",
    "gfapy",
    # pyfastg 0.2.0 added support for MEGAHIT FASTG files!
    "pyfastg >= 0.2.0",
    "pandas",
    "dash-cytoscape",
    "dash-bootstrap-components",
    # v33.3.3 changes how the built-in dark themes are loaded, and this
    # was not apparently supported by earlier versions of dash ag grid. so
    # we can either do a < pin (using the old syntax) or a >= pin (using the
    # new syntax). let's do the latter. (We COULD detect the version and then
    # use that to adjust things but that seems messy and unnecessary)
    "dash-ag-grid >= 33.3.3",
    # we probably don't need to bother including dash in this list (since
    # both dash-cytoscape and dash-bootstrap-components will include it as a
    # dependency) but we may as well be explicit. Note that Dash v4 changes the
    # styles of the dcc.* UI elements a lot -- as of Feb 23, 2026, we should
    # style both versions of the UI elements reasonably well (see
    # https://github.com/marbl/MetagenomeScope/issues/389).
    "dash",
    # same deal for plotly -- should be included alongside dash anyway
    "plotly"
]
# Based on dash-cytoscape's min python version.
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black >= 22.1.0",
]

[project.scripts]
mgsc = "metagenomescope._cli:run_script"

[project.urls]
homepage = "https://marbl.github.io/MetagenomeScope/"
source = "https://github.com/marbl/MetagenomeScope"
